# stickerswap-cli

./: .env.example  .gitignore  AGENTS.md  ENGINEERING_CONTEXT.md  README.md  ROADMAP.md  SPRINT_1_PLAN.md  pyproject.toml
src/stickerswap/: analysis.py  bootstrap.py  checks.py  cli.py  config.py  manifest.py  media.py  paths.py  pipeline.py  runner.py  runtime.py  telegram.py
src/stickerswap/backends/: __init__.py  base.py  insightface_backend.py
tests/: test_checks.py  test_config.py  test_manifest.py  test_pipeline_summary.py  test_runtime.py
