[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stickerswap"
version = "0.1.0"
description = "Telegram video sticker face-swap CLI with guided local workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.3",
]

[project.optional-dependencies]
vision = [
  "numpy>=1.26.4",
  "opencv-python-headless>=4.10.0.84",
  "Pillow>=10.4.0",
]
face-swap = [
  "insightface>=0.7.3",
  "numpy>=1.26.4",
  "onnxruntime>=1.20.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "opencv-python-headless>=4.10.0.84",
  "Pillow>=10.4.0",
]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
stickerswap = "stickerswap.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
